--- a/TWITOFF/templates/base.html
+++ b/TWITOFF/templates/base.html
@@ -9,16 +9,16 @@
   <head>
 
 <body>
-    <h1> Twittoff is cool!!</h1>
+    <h1> Twittoff is cool!! </h1>
 <article class="flex two" style="padding: 3em 1em;">
 
-    {% block contect %}
+    {% block content %}
     <form action="/user" method="post">
         <input type="text" name="user_name" placeholder="User to add">
         <input type="submit" value="Add User">
     </form>
     
-    <form action="compare" method="post">
+    <form action="/compare" method="post">
         <select name="user1">
             {% for user in users %}
             <option value="{{ user.name }}">{{ user.name }}</option>
